Actualizar README Y evidencia del proyecto